--- a/app/styles.css
+++ b/app/styles.css
@@ -1,6 +1,19 @@
-.brunch {
-  font-family: -apple-system, Sans-Serif;
-  text-align: center;
-  font-size: 24pt;
-  color: #3f894a;
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	overflow: hidden;
+}
+
+#game {
+	background: #444;
+	width: 100%;
+	height: 100%;
+	user-select: none;
+}
+
+.game-canvas {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 }
